--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Studentsite</title>
 </head>
 <body>
-    hi this is sanjay.
-</body>
+    Hi this is sanjay.
+    I am studying in VVP engineering college rajkot.
+    I want to become a web developer.
 </html>
