--- a/index.html
+++ b/index.html
@@ -6,7 +6,5 @@
     <title>Studentsite</title>
 </head>
 <body>
-    Hi this is sanjay.
-    I am studying in VVP engineering college rajkot.
-    I want to become a web developer.
+    Hi this is Sanjay Loncha.
 </html>
