--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@
     Hi this is Sanjay Loncha.
 
     I have worked on few CLI apps. Tomorrow i'll showcase it here
+
+    I love to play basketball. I am fitness fan too.
 </html>
